--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,13 +26,21 @@ jobs:
           --health-retries 5
 
     steps:
-    - uses: actions/checkout@v4
-    - name: rung migrations
-      run: make migrateup
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.24.5'
+      - uses: actions/checkout@v4
+      - name: install go-lang migrate
+        env:
+          MIGRATE_VERSION: v4.17.0
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/$MIGRATE_VERSION/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate /usr/bin/
+          which migrate
 
-    - name: Test
-      run: make test
+      - name: rung migrations
+        run: make migrateup
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24.5'
+
+      - name: Test
+        run: make test
