--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,6 +6,7 @@ packages:
     engine: "postgresql"
     path : "./db/sqlc"
     emit_json_tags: true 
+    emit_interface: true
     overrides:
       - column: "accounts.balance"
         go_type: "github.com/shopspring/decimal.Decimal"
